--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"npx webpack --mode development"
+    "build":"npx webpack --mode production",
+    "dev":"npx webpack --mode development"
   },
   "repository": {
     "type": "git",
